# ChessEngine

./: .gitignore
frontend/: CMakeLists.txt  chess.py
frontend/data/: king-w.svg:Zone.Identifier
frontend/src/: main.cpp
